styles.css
.my-main {
    background-image: url('ocean.jpg');
    background-size: cover;
    min-height: 100vh;
    font-size: larger;
    color: black;
}

.navbar {
    /* This .navbar is keeping the li font-size working */
    background-color: white;
    /* white-space: unset; */
}

li {
    font-size: xx-large;
}

/* #profile-pic {
    background-color: white;
} */

.card button {
    font-size: large;
    padding: 0.25rem 0.5rem 0.25rem 0.5rem;
}

